# MutC

./: .gitignore  README.md
mutcc/: CMakeLists.txt  README.md  main.cpp
mutcc/backend/: CMakeLists.txt  Code.cpp  Code.h  CodeGen.cpp  CodeGen.h  Instruction.h  MemoryMap.cpp  MemoryMap.h  Miscell.h  Size.h
mutcc/frontend/: AST.cpp  AST.h  BufferReader.cpp  BufferReader.h  CMakeLists.txt  GlobalConfig.h  Parser.cpp  Parser.h  Source.cpp  Source.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  TypeInfo.cpp  TypeInfo.h
mutcde/: README.md
mutcvm/: CMakeLists.txt  VirtualMachine.cpp  VirtualMachine.cpp.bak  VirtualMachine.h  backend  frontend  main.cpp
unittest/: README.md
unittest/mutcc/test_tokenizer/: CMakeLists.txt  main.cpp
unittest/mutcc/testcases/: test1.mc  test2.mc  test3.mc  test4.mc  test5.mc
